Updated readme and fixed build to support up to Firefox 8.

--- a/README
+++ b/README
@@ -1,3 +1,74 @@
 README
 
-Fork of Adam Goucher's PHP Formatter for Selenium IDE
+This is a fork of Adam Goucher's PHP Formatter for Selenium IDE.
+Example build scripts via Adam Goucher : http://adam.goucher.ca/?p=1331
+
+--------------------------------------------------
+
+BUILD.BAT
+
+@echo off
+ 
+setlocal
+ 
+set APP_NAME="php-formatter"
+set CHROME_PROVIDERS="content"
+ 
+set ROOT_DIR=%CD%
+set TMP_DIR="build"
+ 
+rem remove any left-over files from previous build
+del /Q %APP_NAME%.xpi
+del /S /Q %TMP_DIR%
+ 
+mkdir %TMP_DIR%\chrome\content
+ 
+robocopy content %TMP_DIR%\chrome\content /E
+copy install.rdf %TMP_DIR%
+copy chrome.manifest %TMP_DIR%
+ 
+rem generate the XPI file
+cd %TMP_DIR%
+echo "Generating %APP_NAME%.xpi..."
+ 
+"c:\program files\7-zip\7z.exe" a -r -y -tzip ../%APP_NAME%.zip *
+ 
+cd %ROOT_DIR%
+rename %APP_NAME%.zip %APP_NAME%.xpi
+
+del /S /Q %TMP_DIR%
+rmdir /S /Q %TMP_DIR%
+ 
+endlocal
+
+--------------------------------------------------
+
+BUILD.SH
+
+#!/bin/bash
+ 
+APP_NAME=php-formatter      # short-name, jar and xpi files name. Must be lowercase with no spaces
+CHROME_PROVIDERS="content"  # which chrome providers we have (space-separated list)
+ROOT_DIRS="defaults"        # ...and these directories       (space separated list)
+ 
+ROOT_DIR=`pwd`
+TMP_DIR=build
+ 
+# remove any left-over files from previous build
+rm -f $APP_NAME.jar $APP_NAME.xpi
+rm -rf $TMP_DIR
+ 
+mkdir -p $TMP_DIR/chrome/content
+ 
+cp -v -R content $TMP_DIR/chrome
+cp -v install.rdf $TMP_DIR
+cp -v chrome.manifest $TMP_DIR
+ 
+# generate the XPI file
+cd $TMP_DIR
+echo "Generating $APP_NAME.xpi..."
+zip -r ../$APP_NAME.xpi *
+ 
+cd "$ROOT_DIR"
+
+rm -rf $TMP_DIR
